:construction: position pour equipements